exchange_of_data_btw_containers_in_same_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-two-containers
spec:
  containers:
    - name: container-1
      image: ubuntu
      command:
        - "bin/bash"
        - "-c"
        - "sleep 10000"
      volumeMounts:
        - name: xchange
          mountPath: "/tmp/xchange"
    - name: container-2
      image: centos:7
      command:
        - "bin/bash"
        - "-c"
        - "sleep 10000"
      volumeMounts:
        - name: xchange
          mountPath: "/tmp/data"
  volumes:
    - name: xchange
      emptyDir:  {}
