secrete-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cosumesec
spec:
  containers:
    - name: shell
      image: centos:7
      command:
        - "bin/bash"
        - "-c"
        - "sleep 10000"
      volumeMounts:
        - name: apikeyvol
          mountPath: "/tmp/apikey"
          readOnly: true
  volumes:
    - name: apikeyvol
      secret:
        secretName: apikey
