httpd-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment-pod1
  namespace: httpd
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      volumes:
        - name: pod1-index
          configMap:
            name: httpd-index-file-pod1
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
          - name: pod1-index
            mountPath: "/usr/local/apache2/htdocs"


---
# Creating Service
apiVersion: v1
kind: Service
metadata:
  name: httpd-service-pod1
spec:
  selector:
    app: httpd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
