httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: httpd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pod1
        pathType: Prefix
        backend:
          service:
            name: httpd-service-pod1
            port:
              number: 80
      - path: /pod2
        pathType: Prefix
        backend:
          service:
            name: httpd-service-pod2
            port:
              number: 80
